// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchRepos /> Empty Query State matches loading snapshot 1`] = `
<div>
  <div
    data-testid="starredRepos-error"
  >
    There was an error loading repositories!
  </div>
</div>
`;

exports[`<SearchRepos /> Error State matches error snapshot 1`] = `
<div>
  <div
    data-testid="starredRepos-error"
  >
    There was an error loading repositories!
  </div>
</div>
`;

exports[`<SearchRepos /> Loading State matches loading snapshot 1`] = `
<div>
  <div
    data-testid="starredRepos-loading"
  >
    Loading...
  </div>
</div>
`;
